@@ -1,3 +1,11 @@
+Tue May 14 18:39:22 1996  Richard Basch  <basch@lehman.com>
+
+	* mk_req_ext.c mk_safe.c send_tgs.c:
+		set the length field of the krb5_checksum structure before
+		calling krb5_calculate_checksum.
+
+	* str_conv.c: replaced sha-des3 cksum with hmac-sha.
+
 Tue May 14 02:53:42 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* ser_ctx.c (krb5_context_size, krb5_context_externalize,
